[package]
name = "rust-adcal"
version = "0.1.0"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
regex = "1.4"
